--- a/src/mkvtoolnix-gui/qt_resources.qrc
+++ b/src/mkvtoolnix-gui/qt_resources.qrc
@@ -316,5 +316,6 @@
   <file alias='icons/mkvtoolnix-gui/oxygen/tools-wizard.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/tools-wizard.svg</file>
   <file alias='icons/mkvtoolnix-gui/oxygen/utilities-terminal.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/utilities-terminal.svg</file>
   <file alias='icons/mkvtoolnix-gui/oxygen/view-choose.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/view-choose.svg</file>
+  <file alias='icons/mkvtoolnix-gui/oxygen/view-preview.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/view-preview.svg</file>
  </qresource>
 </RCC>
